<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/medium"
    app:cardCornerRadius="@dimen/very_small"
    app:contentPadding="@dimen/medium"
    app:strokeColor="?attr/colorPrimary"
    app:strokeWidth="@dimen/very_tiny"
    tools:context=".ConfirmationDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_ui_type"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textSize="@dimen/text_small" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggle_button_group_dialog_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/small"
            android:layout_marginBottom="@dimen/small"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dialog_type_dialog"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_dialog_type_dialog"
                tools:ignore="PrivateResource" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dialog_type_bottom_sheet"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_dialog_type_bottom_sheet"
                tools:ignore="PrivateResource" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_theme"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textSize="@dimen/text_small" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggle_button_group_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/small"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_theme_day_night"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_theme_day_night"
                tools:ignore="PrivateResource" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_theme_light"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_theme_light"
                tools:ignore="PrivateResource" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_theme_dark"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_theme_dark"
                tools:ignore="PrivateResource" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/sm_showLottieAnimation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/switch_show_lottie_animation"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textSize="@dimen/text_small"
            app:switchPadding="@dimen/medium_fit" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggle_button_group_animation_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:checkedButton="@+id/btn_animation_centered"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_animation_centered"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/btn_animation_centered"
                tools:ignore="PrivateResource" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_animation_full"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/btn_animation_full"
                tools:ignore="PrivateResource" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/sm_showLottieAnimationCloseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/switch_show_lottie_animation_close_button"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textSize="@dimen/text_small"
            app:switchPadding="@dimen/medium_fit" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/sm_showNegativeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/switch_show_negative_button"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textSize="@dimen/text_small"
            app:switchPadding="@dimen/medium_fit" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/sm_showButtonIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/switch_show_button_icon"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textSize="@dimen/text_small"
            app:switchPadding="@dimen/medium_fit" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggle_button_group_icon_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:checkedButton="@+id/btn_icon_svg"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_icon_svg"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_icon_svg"
                tools:ignore="PrivateResource" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_icon_bitmap"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_icon_bitmap"
                tools:ignore="PrivateResource" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_actionDelay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium"
                android:text="@string/label_action_delay"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textSize="@dimen/text_small" />

            <com.ramotion.fluidslider.FluidSlider
                android:id="@+id/sb_actionDelay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:duration="400"
                app:end_text=""
                app:size="small"
                app:start_text=""
                app:text_size="@dimen/text_small" />

        </FrameLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/sm_useCustomText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium"
            android:checked="false"
            android:text="@string/switch_use_custom_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textSize="@dimen/text_small"
            app:switchPadding="@dimen/medium_fit" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/sm_cancelOnBackPressed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/switch_cancel_on_back_pressed"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textSize="@dimen/text_small"
            app:switchPadding="@dimen/medium_fit" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/sm_cancelOnTouchOutside"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/switch_cancel_on_touch_outside"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textSize="@dimen/text_small"
            app:switchPadding="@dimen/medium_fit" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
