<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:stateListAnimator="@animator/app_bar_layout_elevation"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/AppTheme.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/sm_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="4dp"
                app:contentPadding="16dp"
                app:strokeColor="?attr/colorPrimary"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:text="@string/label_ui_type"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                    <com.google.android.material.button.MaterialButtonToggleGroup
                        android:id="@+id/toggle_button_group_dialog_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:singleSelection="true">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_dialog_type_dialog"
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_dialog_type_dialog"
                            tools:ignore="PrivateResource" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_dialog_type_bottom_sheet"
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_dialog_type_bottom_sheet"
                            tools:ignore="PrivateResource" />

                    </com.google.android.material.button.MaterialButtonToggleGroup>

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/sm_showLottieAnimation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/switch_show_lottie_animation"
                        app:switchPadding="24dp" />

                    <com.google.android.material.button.MaterialButtonToggleGroup
                        android:id="@+id/toggle_button_group_animation_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:checkedButton="@+id/btn_animation_centered"
                        app:singleSelection="true">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_animation_centered"
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:text="@string/btn_animation_centered"
                            tools:ignore="PrivateResource" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_animation_full"
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:text="@string/btn_animation_full"
                            tools:ignore="PrivateResource" />

                    </com.google.android.material.button.MaterialButtonToggleGroup>

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/sm_showNegativeButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/switch_show_negative_button"
                        app:switchPadding="24dp" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/sm_showButtonIcon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/switch_show_button_icon"
                        app:switchPadding="24dp" />

                    <com.google.android.material.button.MaterialButtonToggleGroup
                        android:id="@+id/toggle_button_group_icon_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:checkedButton="@+id/btn_icon_svg"
                        app:singleSelection="true">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_icon_svg"
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:text="@string/btn_icon_svg"
                            tools:ignore="PrivateResource" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_icon_bitmap"
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:text="@string/btn_icon_bitmap"
                            tools:ignore="PrivateResource" />

                    </com.google.android.material.button.MaterialButtonToggleGroup>

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/sm_useCustomText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/switch_use_custom_text"
                        app:switchPadding="24dp" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/sm_enableAutoDismiss"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/switch_enable_auto_dismiss"
                        app:switchPadding="24dp" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/sm_cancelOnBackPressed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/switch_cancel_on_back_pressed"
                        app:switchPadding="24dp" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/sm_cancelOnTouchOutside"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/switch_cancel_on_touch_outside"
                        app:switchPadding="24dp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_showDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/button_show_dialog" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
